# Chat4Me

./: .coverage  .gitignore  LICENSE  Readme.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: config.yaml
src/chat4me/: __init__.py  config.py  main.py
src/chat4me/agent/: memory.py  orchestrator.py
src/chat4me/automation/: keyboard.py  mouse.py
src/chat4me/llm/: client.py  prompts.py
src/chat4me/screen/: capture.py  window.py
src/chat4me/utils/: logging.py
src/chat4me/vision/: analyzer.py  ocr.py
tests/: test_config.py  test_imports.py  test_logging.py  test_main.py
tests/test_agent/: test_memory.py  test_orchestrator.py
tests/test_automation/: test_keyboard.py  test_mouse.py
tests/test_llm/: test_client.py  test_prompts.py
tests/test_screen/: test_capture.py  test_window.py
tests/test_vision/: test_analyzer.py  test_ocr.py
