[project]
name = "chat4me"
version = "0.1.0"
description = "Local-first AI agent that watches your Discord and chats for you"
readme = "Readme.md"
requires-python = ">=3.13"
authors = [{ name = "Chat4Me" }]
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "mss>=9.0",
    "opencv-python-headless>=4.9",
    "pytesseract>=0.3",
    "pyautogui>=0.9",
    "pynput>=1.7",
    "httpx>=0.27",
    "pillow>=11.0",
]

[project.scripts]
chat4me = "chat4me:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
